--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "node-api",
+  "name": "api",
   "version": "1.0.0",
   "description": "Node.js on Docker",
   "author": "First Last <thomas_newton@mckinsey.com>",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha --recursive --exit"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "express": "^4.16.3",
-    "mocha": "^5.2.0",
-    "npm": "^6.1.0",
-    "supertest": "^3.1.0"
+    "express": "^4.16.3"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0",
     "request": "^2.87.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/newtonlabs/fargate-node-api.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/newtonlabs/fargate-node-api/issues"
+  },
+  "homepage": "https://github.com/newtonlabs/fargate-node-api#readme"
 }
