more recent cli

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,16 @@ jobs:
       - run: make push
 
       # deploy to DEV
+      # install python and awscli
       - run:
-          name: Install aws cli
-          command:
-            sudo apt-get -y -qq install awscli
-
+          name: Install dependencies
+          working_directory: /
+          command: |
+            apt-get -y -qq update
+            apt-get -y -qq install python3.4-dev
+            curl -O https://bootstrap.pypa.io/get-pip.py
+            python3.4 get-pip.py --user
+            pip install awscli --upgrade --user
+            
       # Issue Command
       - run: make deploy
