--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,11 +52,11 @@ jobs:
           name: Install dependencies
           working_directory: /
           command: |
-            apt-get -y -qq update
-            apt-get -y -qq install python3.4-dev
+            sudo apt-get -y -qq update
+            sudo apt-get -y -qq install python3.4-dev
             curl -O https://bootstrap.pypa.io/get-pip.py
-            python3.4 get-pip.py --user
-            pip install awscli --upgrade --user
-            
+            sudo python3.4 get-pip.py --user
+            sudo pip install awscli --upgrade --user
+
       # Issue Command
       - run: make deploy
